# kqode-cli

./: .env.example  .gitattributes  .gitignore  AGENTS.md  CONTRIBUTING.md  CONTRIBUTING.zh-CN.md  Cargo.toml  LICENSE-MIT  README.md  README.zh-CN.md  THIRD_PARTY_NOTICES.md  build.rs  main.rs  skills-lock.json
.cargo/: config.toml
.github/: copilot-instructions.md
.run/: xtask_blog_build.run.xml  xtask_blog_dev.run.xml  xtask_blog_install.run.xml  xtask_blog_preview.run.xml  xtask_blog_serve.run.xml  xtask_blog_serve_en.run.xml  xtask_blog_typecheck.run.xml  xtask_eval.run.xml  xtask_fixture_prepare_react_complex.run.xml  xtask_fixture_prepare_react_simple.run.xml  xtask_help.run.xml  xtask_package.run.xml  xtask_package_release.run.xml  xtask_set-version.run.xml  xtask_tui_dev.run.xml  xtask_tui_dev_here.run.xml  xtask_tui_install.run.xml  xtask_tui_prod.run.xml  xtask_tui_test.run.xml  xtask_tui_typecheck.run.xml
blog/: AGENTS.md  docusaurus.config.ts  package.json
docs/: 2026-06-25-kqode-requirements.md  kqode_architecture_spec.md  kqode_build_path.md  kqode_core_implementation_details.md  kqode_detailed_requirements_index.md  kqode_evaluation_spec.md  kqode_platform_implementation_details.md  kqode_reference_implementations.md
evaluation/: compose.yaml  requirements.txt
migrations/: V1__initial_schema.sql  V2__session_resume_index.sql  V3__memory_index.sql  V4__theme_preferences.sql  V5__memory_scope_mappings.sql
scripts/: eval-grade.ps1  eval-grade.sh  xtask.ps1  xtask.sh
src/: backend.rs  build_env.rs  config.rs  connect.rs  debug_log.rs  git.rs  (+6 more)
(+1216 files in other folders)
