[workspace]
members = [".", "xtask"]
resolver = "3"

[package]
name = "KQode"
version = "0.1.1"
edition = "2024"
license = "MIT OR Apache-2.0"

[lib]
name = "kqode"
path = "src/lib.rs"

[[bin]]
name = "kqode"
path = "main.rs"

[dependencies]
lsp-server = "0.7"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
